--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,32 @@ h1 {
     flex-direction: column;
 }
 
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
-}
-
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.photographer_section article h2 {
+    color: #D3573C;
+    font-size: 36px;
+    margin: 20px 0px 10px 0px;
+}
+
+.photographer_section article h3 {
+    color: #901C1C;
+    font-size: 13px;
+    margin: 0px 0px 3px 0px;
+}
+
+.photographer_section article h4 {
+    font-size: 10px;
+    margin: 0px 0px 3px 0px;
+}
+
+.photographer_section article p {
+    color: #757575;
+    font-size: 8px;
+    margin: 0px 0px 3px 0px;
 }
