--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,11 +1,50 @@
+/****** General ***********/
+* {
+    font-family: 'DM-Sans', sans-serif;
+}
+
 #contact_modal {
     display: none;
 }
 
 .photograph-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
+    padding: 0 20px;
+}
+
+
+.photograph-header .info h2 {
+    color: #D3573C;
+    font-weight: 400;
+    font-size: 64px;
+    margin: 20px 0px 10px 0px;
+}
+
+.photograph-header .info h3 {
+    color: #901C1C;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 0px 0px 3px 0px;
+}
+
+.photograph-header .info h4 {
+    color: #525252;
+    font-weight: 400;
+    font-size: 18px;
+    margin: 30px 0px 3px 0px;
+}
+
+.photograph-header img {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .contact_button {
@@ -74,3 +113,5 @@ form input {
     border: none;
     border-radius: 5px;
 }
+
+ 
