--- a/css/photographer.css
+++ b/css/photographer.css
@@ -133,11 +133,72 @@
 
 
 /***** Lightbox *****/
-.lightbox {
+#lightbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8); /* Fond semi-transparent pour l'arrière-plan */
+    z-index: 999; /* Z-index élevé pour s'assurer que la lightbox est au-dessus du contenu */
+}
+
+.lightbox-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    padding-top: 10px;
+    width: 460px;
+    height: 620px;
+    position: relative;
+}
+
+#titre-photo-lightbox.titre-photo {
+    color: #901C1C;
+}
+
+#contenu-photo-lightbox img, video {
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    height: 600px;
+    object-fit: cover;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
+.close-lightbox {
+    display: flex;
+    position: absolute;
+    left: 438px;
+    font-size: large;
+    color: #901C1C;
+}
+
+#left-arrow.arrow {
+    display: flex;
+    position: absolute;
+    right: 436px;
+    top: 300px;
+    font-size: large;
+    color: #901C1C;
+}
+
+#right-arrow.arrow {
+    display: flex;
+    position: absolute;
+    left: 436px;
+    top: 300px;
+    font-size: large;
+    color: #901C1C;
+}
+
+.hidden {
+    display: block;
 }
 
 
@@ -218,14 +279,28 @@ textarea.champ-form {
 }
 
 /***** informations like et tarif *****/
-.like {
-    background-color: #d3573c;
+.onglet {
+    display: flex;
+    gap: 60px;
+    background-color: #DB8876;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     bottom: 0;
     font-size: 18px;
-    padding: 10px 15px;
+    padding: 10px 20px;
     position: fixed;
     right: 35px;
     width: fit-content;
+}
+
+.onglet .total-like {
+    display: flex; 
+    gap: 5px;
+}
+
+.onglet p {
+    font-weight: 500;
+    font-size: 18px;
+    padding: 0;
+    margin: 0;
 }
