--- a/css/photographer.css
+++ b/css/photographer.css
@@ -108,33 +108,59 @@
     flex-direction: column;
 }
 
+.media .media-item > img {
+    height: 351px;
+    width: 350px;
+    object-fit: cover;
+}
+
+.media .media-item > video {
+    height: 351px;
+    width: 350px;
+    object-fit: cover;
+}
 .media .media-info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: relative;
 }
 
 .media .media-info h2 {
     color: #901C1C;
     font-size: 20px;
     font-weight: 400;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
-.media img {
-    height: 351px;
-    width: 350px;
-    object-fit: cover;
+/*.media .media-info .heart {
+    display: flex;
+    position: absolute;
+	right: 10px;
+	width: 20px;
+	transition: opacity 0.5s;
 }
 
-.media video {
-    height: 351px;
-    width: 350px;
-    object-fit: cover;
+.media .media-info .heart .heart_empty {
+	opacity: 1;
 }
+
+.media .media-info .heart:hover .heart_empty {
+	opacity: 0;
+}
+
+.media .media-info .heart .heart_full {
+	opacity: 0;
+}
+
+.media .media-info .heart:hover .heart_full {
+	opacity: 1;
+}*/
 
 
 /***** Lightbox *****/
-#lightbox {
+.lightbox {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,7 +202,6 @@
     display: flex;
     position: absolute;
     left: 438px;
-    font-size: large;
     color: #901C1C;
 }
 
@@ -196,10 +221,6 @@
     top: 300px;
     font-size: large;
     color: #901C1C;
-}
-
-.hidden {
-    display: block;
 }
 
 
@@ -233,6 +254,9 @@
 }
 
 .modal header h2 {
+    display: flex;
+    flex-direction: column;
+    font-size: 40px;
     margin: 0;
 }
 
@@ -254,11 +278,13 @@
     width: 100%;
     padding: 10px;
     margin-top: 5px;
+    width: 94%;
 }
 
 textarea.champ-form {
     height: 150px;
     resize: none;
+    width: 94%;
 }
 
 .btn-valid {
