--- a/css/photographer.css
+++ b/css/photographer.css
@@ -75,10 +75,9 @@
 }
 
 .sort > select {
-    background-color: #D3573C;
+    background-color: #901C1C;
     border: none;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
     color: #ffffff;
     font-size: 18px;
     height: 60px;
@@ -86,7 +85,7 @@
     width: 150px;
 }
 
-.sort > select > option {
+#sort > select > option {
     border-top: 1px solid #ffffff;
 }
 
@@ -161,16 +160,15 @@
 
 /***** Lightbox *****/
 .lightbox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 36%;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8); /* Fond semi-transparent pour l'arrière-plan */
+    background: rgba(150, 150, 150, 0.8);
     z-index: 999; /* Z-index élevé pour s'assurer que la lightbox est au-dessus du contenu */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .lightbox-content {
@@ -305,7 +303,7 @@ textarea.champ-form {
     cursor: pointer;
 }
 
-/***** informations like et tarif *****/
+/***** Informations like et tarif *****/
 .onglet {
     display: flex;
     gap: 60px;
