--- a/css/photographer.css
+++ b/css/photographer.css
@@ -118,44 +118,47 @@
     width: 350px;
     object-fit: cover;
 }
+
 .media .media-info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: relative;
+    padding-right: 25px;
 }
 
 .media .media-info h2 {
     color: #901C1C;
     font-size: 20px;
     font-weight: 400;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
-/*.media .media-info .heart {
+.media .media-info .heart {
     display: flex;
     position: absolute;
-	right: 10px;
-	width: 20px;
-	transition: opacity 0.5s;
+    top: 17px;
+    right: 19px;
+    transition: opacity 0.5s;
+    z-index: 1;
+}
+
+.media .media-info .heart img {
+    width: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .media .media-info .heart .heart_empty {
-	opacity: 1;
-}
-
-.media .media-info .heart:hover .heart_empty {
-	opacity: 0;
+    transition: opacity 0.5s;
+    z-index: 2;
 }
 
 .media .media-info .heart .heart_full {
-	opacity: 0;
+    transition: opacity 0.5s;
+    opacity: 0;
+    z-index: 1;
 }
-
-.media .media-info .heart:hover .heart_full {
-	opacity: 1;
-}*/
 
 
 /***** Lightbox *****/
@@ -163,11 +166,11 @@
     display: none;
     position: fixed;
     top: 0;
-    left: 36%;
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(150, 150, 150, 0.8);
-    z-index: 999; /* Z-index élevé pour s'assurer que la lightbox est au-dessus du contenu */
+    z-index: 999;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
@@ -175,39 +178,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background: white;
-    padding-top: 10px;
-    width: 460px;
-    height: 620px;
+    padding: 15px 0px 45px 0px;
     position: relative;
 }
 
 #titre-photo-lightbox.titre-photo {
+    display: flex;
+    position: absolute;
+    left: 412px;
+    top: 702px;
     color: #901C1C;
 }
 
 #contenu-photo-lightbox img, video {
     display: flex;
     justify-content: center;
-    width: 400px;
-    height: 600px;
+    width: 710px;
+    height: 680px;
     object-fit: cover;
     overflow-clip-margin: content-box;
     overflow: clip;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .close-lightbox {
     display: flex;
     position: absolute;
-    left: 438px;
+    right: 305px;
+    top: 10px;
     color: #901C1C;
 }
 
 #left-arrow.arrow {
     display: flex;
     position: absolute;
-    right: 436px;
-    top: 300px;
+    left: 305px;
+    top: 350px;
     font-size: large;
     color: #901C1C;
 }
@@ -215,8 +223,8 @@
 #right-arrow.arrow {
     display: flex;
     position: absolute;
-    left: 436px;
-    top: 300px;
+    right: 306px;
+    top: 350px;
     font-size: large;
     color: #901C1C;
 }
@@ -224,15 +232,15 @@
 
 /***** Modal de contact *****/
 .modal {
-    display: none; /* Initialement masquée */
+    display: none; 
     position: fixed;
-    top: 50%; /* Position verticale au milieu de l'écran */
-    left: 50%; /* Position horizontale au milieu de l'écran */
-    transform: translate(-50%, -50%); /* Pour centrer parfaitement la modale */
-    background: rgba(0, 0, 0, 0.5); /* Fond semi-transparent pour l'arrière-plan obscurci */
-    z-index: 999; /* Pour la superposer à d'autres éléments si nécessaire */
-    width: 80%; /* Largeur de la modale */
-    max-width: 400px; /* Largeur maximale */
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    background: rgba(0, 0, 0, 0.5); 
+    z-index: 999; 
+    width: 80%; 
+    max-width: 400px; 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -316,6 +324,7 @@ textarea.champ-form {
     position: fixed;
     right: 35px;
     width: fit-content;
+    z-index: 999;
 }
 
 .onglet .total-like {
