--- a/css/photographer.css
+++ b/css/photographer.css
@@ -8,7 +8,7 @@
 }
 
 
-/***** Encadrer des photographes *****/
+/***** Encadrement des photographes *****/
 .photograph-header {
     display: flex;
     flex-direction: row;
@@ -61,8 +61,16 @@
     cursor: pointer;
 }
 
+.contact-button:hover {
+    background-color: #d3573c;
+    color: #525252;
+    cursor: pointer;
+}
+
+
 /***** Tri *****/
 .sort {
+    position: relative;
     display: flex;
     margin: 10px 0px 30px 100px;
     gap: 20px;
@@ -74,7 +82,10 @@
     font-weight: bold;
 }
 
-.sort > select {
+.sort-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #901C1C;
     border: none;
     border-radius: 5px;
@@ -85,8 +96,31 @@
     width: 150px;
 }
 
-#sort > select > option {
+.sort-element {
+    display: none;
+    position: absolute;
+    border-top-left-radius: 5px;
+    left: 92px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    z-index: 100; /* Changez cette valeur à une valeur plus élevée */
+}
+
+.dropdown-option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #901C1C;
     border-top: 1px solid #ffffff;
+    padding: 10px;
+    cursor: pointer;
+    height: 60px;
+    padding: 0 5px;
+    width: 150px;
+    color: #ffffff;
+}
+
+.dropdown-option:hover {
+    background-color: #d3573c;
 }
 
 
@@ -287,19 +321,20 @@
 }
 
 textarea.champ-form {
-    height: 150px;
+    height: 100px;
     resize: none;
     width: 94%;
 }
 
 .btn-valid {
     display: block;
-    width: 100%;
-    background-color: #007BFF;
+    width: 30%;
+    font-size: 10px;
+    background-color: #901C1C;
     color: white;
-    padding: 10px;
+    padding: 18px;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
     cursor: pointer;
     margin-top: 10px;
 }
@@ -309,6 +344,7 @@ textarea.champ-form {
     color: #525252;
     cursor: pointer;
 }
+
 
 /***** Informations like et tarif *****/
 .onglet {
