--- a/css/photographer.css
+++ b/css/photographer.css
@@ -100,6 +100,8 @@
     display: none;
     position: absolute;
     border-top-left-radius: 5px;
+    font-size: 18px;
+    border-radius: 5px;
     left: 92px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     z-index: 100; /* Changez cette valeur à une valeur plus élevée */
