--- a/css/photographer.css
+++ b/css/photographer.css
@@ -84,8 +84,9 @@
 
 .sort-btn {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 0px 20px;
     background-color: #901C1C;
     border-radius: 5px;
     color: #ffffff;
@@ -95,15 +96,17 @@
     position: relative;
 }
 
-.sort-btn .fa-chevron-down {
+.sort-btn .chevron-down {
     display: flex;
-    position: absolute;
-    left: 120px;
+    width: 18px;
+    height: 18px;
     z-index: 99;
 }
 
 .sort-element {
     display: none;
+	flex-direction: column;
+	align-items: center;
     position: absolute;
     border-top-left-radius: 5px;
     font-size: 18px;
@@ -111,16 +114,19 @@
     left: 92px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     z-index: 100; /* Changez cette valeur à une valeur plus élevée */
+	background-color:#901C1C;
+	padding: 10px;
 }
 
 .dropdown-option {
     display: flex;
-    padding-left: 20px;
-    gap: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: space-between;
     align-items: center;
     background-color: #901C1C;
     cursor: pointer;
-    height: 60px;
+    height: 50px;
     width: 150px;
     color: #ffffff;
 }
@@ -131,10 +137,9 @@
 
 .line {
     display: block;
-    border-top: 1px solid #ffffff;
-    background-color: #901C1C;
-    width: 100px;
-    margin: 0px 25px;
+    background-color: #ffffff;
+    width: 100%;
+	height: 1px;
 }
 
 
@@ -250,6 +255,10 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.chevron {
+    width: 42px;
+}
+
 .close-lightbox {
     display: flex;
     position: absolute;
@@ -263,6 +272,8 @@
     position: absolute;
     left: 305px;
     top: 350px;
+    height: 42px;
+    width: 42px;
     font-size: large;
     color: #901C1C;
 }
@@ -272,6 +283,8 @@
     position: absolute;
     right: 306px;
     top: 350px;
+    height: 42px;
+    width: 42px;
     font-size: large;
     color: #901C1C;
 }
