--- a/css/photographer.css
+++ b/css/photographer.css
@@ -122,6 +122,7 @@
     display: flex;
     padding-left: 10px;
     padding-right: 10px;
+    border: none;
     justify-content: space-between;
     align-items: center;
     background-color: #901C1C;
